2005-03-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkprivate.h: Define macros GTK_PARAM_READABLE,
	GTK_PARAM_WRITABLE, GTK_PARAM_READWRITE which are like
	their G_ counterparts, but also mark the name, nick
	and blurb as static.

	* gtk/*.c: Mark param spec strings as static, using
	the new macros.

	* gtk/gtkspinbutton.h: Fix a typo.

2005-03-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcellrendererprogress.c: 
	* gtk/gtkcellrendererpixbuf.c: 
	* gtk/gtkcellrenderercombo.c: 
	* gtk/gtkcellrenderer.c: 
	* gtk/gtkcalendar.c: 
	* gtk/gtkbutton.c: 
	* gtk/gtkbox.c: 
	* gtk/gtkbbox.c: 
	* gtk/gtkaspectframe.c: 
	* gtk/gtkarrow.c: 
	* gtk/gtkalignment.c: 
	* gtk/gtkactiongroup.c: 
	* gtk/gtkaction.c:
	* gtk/gtkaccellabel.c: 
	* gtk/gtkaboutdialog.c: Mark param spec strings as static.

	* gdk/gdkpango.c (gdk_pango_renderer_class_init): 
	* gdk/gdkdisplaymanager.c (gdk_display_manager_class_init): Mark
	param spec strings as static.

2005-03-21  Tor Lillqvist  <tml@novell.com>

	* modules/engines/ms-windows/*.c: Silence gcc warnings (unused
	variables, unhandled enum value in switch). Use g_object_unref()
	instead of deprecated gdk_gc_unref() and gdk_drawable_unref().

	* modules/engines/ms-windows/xp_theme.c (xp_theme_map_gtk_state): 
	Add missing "case" keyword.

	* modules/engines/ms-windows/Makefile.am: Link with -lgdi32
	explicitly.

2005-03-20  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkdisplay-win32.c (gdk_display_get_name): Return the
	Terminal Services session number, window station name (always
	"WinSta0" in interactive processes), and desktop name (typically
	"Default"), concatenated with backslash separators.
	(gdk_display_open): Accept only NULL or the string
	gdk_display_get_name() returns as display name.

2005-03-20  Matthias Clasen  <mclasen@redhat.com>

	Make PLT-reduction work with gcc4, and don't include
	everything in gdkalias.h:
	
	* gtk/grk.symbols: Group symbols by header and source file.