@@ -135,7 +135,7 @@ static void gtk_range_style_set      (GtkWidget        *widget,
 static void update_slider_position   (GtkRange	       *range,
 				      gint              mouse_x,
 				      gint              mouse_y);
-
+static void stop_scrolling           (GtkRange         *range);
 
 /* Range methods */
 
@@ -891,6 +891,8 @@ gtk_range_unmap (GtkWidget *widget)
 {
   GtkRange *range = GTK_RANGE (widget);
     
+  stop_scrolling (range);
+
   gdk_window_hide (range->event_window);
 
   GTK_WIDGET_CLASS (parent_class)->unmap (widget);
@@ -1362,7 +1364,8 @@ update_slider_position (GtkRange *range,
                  &handled);
 }
 
-static void stop_scrolling (GtkRange *range)
+static void 
+stop_scrolling (GtkRange *range)
 {
   range_grab_remove (range);
   gtk_range_remove_step_timer (range);
